# exa-wallet-android

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: exawallet.cpp  exawallet.h
app/src/main/java/com/exawallet/: RootActivity.java
app/src/main/java/com/exawallet/api/: APIManager.java  ISigner.java  SignedJsonRequest.java  SignedStringRequest.java
app/src/main/java/com/exawallet/common/: Analytics.java  AppContext.java  ErrorMessage.java  ErrorWithProcessMessage.java  IEvent.java  QRAddress.java  QRInviewCode.java  WalletNewBlock.java  WalletRefreshed.java
app/src/main/java/com/exawallet/dialogs/: CustomDialog.java  EnterPasswordDialog.java  ErrorDialog.java  ErrorTwoButtonDialog.java  InfoDialog.java  TwoButtonDialog.java  UpDialog.java
app/src/main/java/com/exawallet/engine/: Engine.java
app/src/main/java/com/exawallet/fragments/: AboutFragment.java  AccessWalletFragment.java  BalanceFragment.java  BaseFragment.java  BaseSyncWalletFragment.java  BaseToolbarFragment.java  ChangePasswordFragment.java  ChartFragment.java  CheckPinFragment.java  ConfirmMnemonicFragment.java  CreatePersonalWalletFragment.java  CreateSharedWalletFragment.java  CreateWalletFragment.java  EditWalletFragment.java  InsertInviteCodeFragment.java  InviteCodeFragment.java  JoinSharedWalletFragment.java  PinFragment.java  ProcessWalletFragment.java  ReceiveFragment.java  RecreateWalletFragment.java  RemindMnemonicFragment.java  RestoreMnemonicFragment.java  RestoreWalletFragment.java  SendFragment.java  SettingsFragment.java  SetupPinFragment.java  ShowMnemonicFragment.java  SingleManageFragment.java  SplashFragment.java  SuccessMnemonicFragment.java  SyncSplashFragment.java  TransactionInfoFragment.java  TxProposalsMetaFragment.java  WalletManageFragment.java  WalletsFragment.java
app/src/main/java/com/exawallet/messaging/: ExaFirebaseMessagingService.java
app/src/main/java/com/exawallet/model/: ElectrumUtils.java  ModelInitializer.java  NativeCryptoUtils.java  NetworkType.java  PendingTransaction.java  RestoreMnemonicState.java  TransactionHistory.java  TransactionInfo.java  Transfer.java  Wallet.java  WalletColor.java  WalletListener.java  WalletManager.java  WalletStatus.java
app/src/main/java/com/exawallet/presenters/: AboutPresenter.java  (+35 more)
app/src/main/jni/: Android.mk
app/src/main/res/drawable/: background_button.xml  border.xml  ic_about.xml  ic_add_circle_white.xml  ic_arrow_back_white.xml  ic_arrow_right_fade_blue.xml  ic_arrow_right_gray.xml  ic_backspace.xml  ic_bar_chart.xml  ic_calendar_today.xml  ic_change_password.xml  ic_clock_blue.xml  ic_confirmed.xml  ic_content_copy_gray.xml  ic_copy.xml  ic_declined_gray.xml  ic_delete.xml  ic_edit.xml  ic_exawallet.xml  ic_exawallet_black.xml  ic_hourglass_empty_gray.xml  ic_info_outline_blue.xml  ic_join_fab.xml  ic_join_multisig_wallet.xml  ic_join_multisig_wallet_white.xml  ic_mnemonic.xml  ic_monero.xml  ic_multisig_wallet_orange.xml  ic_multisig_wallet_white.xml  ic_personal_fab.xml  ic_personal_wallet_orange.xml  ic_personal_wallet_white.xml  ic_qr.xml  ic_receive_black.xml  ic_receive_white.xml  ic_received.xml  ic_rescan.xml  ic_restore_fab.xml  ic_scan.xml  ic_send_black.xml  (+27 more)
app/src/main/res/layout/: dialog_enter_password.xml  dialog_error.xml  dialog_error_two_button.xml  dialog_info.xml  dialog_two_button.xml  dialog_up.xml  fragment_about.xml  fragment_access_wallet.xml  fragment_balance.xml  fragment_change_password.xml  fragment_chart_view.xml  fragment_confirm_mnemonic.xml  fragment_create_multisig_wallet.xml  fragment_create_personal_wallet.xml  fragment_edit_wallet.xml  fragment_insert_invite_code.xml  fragment_join_multisig_wallet.xml  fragment_manage.xml  fragment_manage_single.xml  fragment_pin.xml  fragment_receive.xml  fragment_remind_invite_code.xml  fragment_remind_mnemonic.xml  fragment_restore_mnemonic.xml  fragment_restore_wallet.xml  fragment_send.xml  fragment_settings.xml  fragment_show_mnemonic.xml  fragment_splash.xml  fragment_success_mnemonic.xml  fragment_sync_splash.xml  fragment_transaction_info.xml  fragment_txproposals_meta.xml  fragment_wallets.xml  layout_mnemonic_item_black.xml  layout_mnemonic_item_white.xml  layout_secret_item.xml  layout_transaction_item.xml  layout_tx_proposals_item.xml  layout_wallet_item.xml  (+4 more)
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-w180dp/: dimens.xml
app/src/main/res/values-w270dp/: dimens.xml
app/src/main/res/values-w360dp/: dimens.xml
app/src/main/res/values-w720dp/: dimens.xml
(+170 files in other folders)
